# csp-custom-web-ui

./: CMakeLists.txt  README.md
gui/: custom-web-ui-simple.html
src/: Plugin.cpp  Plugin.hpp
